Change telegram API

--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "giphy-api": "^2.0.1",
-    "telegraf": "^3.38.0",
+    "node-telegram-bot-api": "^0.50.0",
     "xmlhttprequest": "^1.8.0"
   },
   "devDependencies": {},
